--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 layout: default
 title: Home
 ---
-<div class="container" style="text-align:center;width:auto;">
+<div class="banner">
     <h1>Welcome to Elijah Iverson's Website!</h1>
     <p>The design and structure of this site is still currently under development</p>
     <p>Yes, it's a bit blank at the moment.</p>
 </div>
-<div class="block container">
-    <p>Blog notfications are manually done on my LinkedIn.</p>
+<div class="flex container">
+    <div class="block">
+        <p>Blog notfications are manually done on my LinkedIn.</p>
+    </div>
 </div>
-
