More Formatting & Blog Update
Added second blog and recent blog post on homepage.

Modified styling and little parts of content to look better.

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: About Me
+title: About Me | ETI
 image: /images/LinkedinLogo.png
 ---
 <div class="leftside">
@@ -13,7 +13,7 @@ image: /images/LinkedinLogo.png
         </p>
     </div>
     <div class="block container">
-        <h3>Contact Me</h3>
+        <h2>Contact Me</h2>
         <p>You can email me at <a href="mailto:eliiverson00@gmail.com?">eliiverson00@gmail.com</a></p>
         <p style="text-align:center;"><a href="https://www.linkedin.com/in/elijah-iverson-7a73b41bb/" target="_blank">
             <img src="/images/LinkedinLogo.png" class="linkicon"></a>
