--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,13 @@
 ---
 layout: default
-title: Blog
+title: Blog | ETI
 ---
 <div class="block container">
     <h1>All Blog Post:</h1>
     <ul>
         {% for post in site.posts %}
-        <li><a href="{{ post.url }}">{{post.date | date_to_string}} - {{ post.title }}</a></li>
+        <li style="margin-bottom:10px;"><a href="{{ post.url }}">
+            {{post.date | date_to_string}} - {{ post.title }}</a></li>
         {% endfor %}
     </ul>
 </div>
