New Addition & Edits
Better Styling,
Remove a Blog,
Modified Directories,
Add Code page that reacts with GitHub API.

--- a/about.html
+++ b/about.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 title: About Me | ETI
-image: /images/LinkedinLogo.png
 ---
 <div class="leftside">
     <div class="block container">
@@ -16,13 +15,8 @@ image: /images/LinkedinLogo.png
         <h2>Contact Me</h2>
         <p>You can email me at <a href="mailto:eliiverson00@gmail.com?">eliiverson00@gmail.com</a></p>
         <p style="text-align:center;"><a href="https://www.linkedin.com/in/elijah-iverson-7a73b41bb/" target="_blank">
-            <img src="/images/LinkedinLogo.png" class="linkicon"></a>
+            <img src="/assets/images/LinkedinLogo.png" class="linkicon"></a>
         <a href="https://github.com/EmanG7" target="_blank">
-            <img src="/images/GithubLogo.png" class="linkicon"></a></p>
+            <img src="/assets/images/GithubLogo.png" class="linkicon"></a></p>
     </div>
-</div>
-<div class="pdf container rightside">
-    <object data="/files/Iverson_Resume.pdf" type="application/pdf" width="100%" height="500px">
-        <p>Unable to display PDF file. <a href="/files/Iverson_Resume.pdf">Download</a> instead.</p>
-    </object>
 </div>
