--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@ title: Home | ETI
     <p>Infosec blog by Elijah Iverson</p>
     <p>The design and structure of this site is still currently under development</p>
 </div>
+<script src="/assets/js/newestgithubfetch.js"></script>
 <div class="flex container">
     <a href="{{ site.posts[0].url }}" style="text-decoration: none;">
         <div class="block" style="text-align:center;">
             <h3>Most Recent Blog Post</h3>
-            <img src="{{ site.posts[0].image }}" alt="Image Related to Recent Post" width="100px" height="100px">
-            <p>{{ site.posts[0].title }}</p>
+            <img src="{{ site.posts[0].image }}" alt="Image Related to Recent Post" width="auto" height="100px">
+            <p style="text-decoration: underline;">{{ site.posts[0].title }}</p>
             <p>Posted on {{site.posts[0].date | date_to_string}}</p>
         </div>
     </a>
+    <div id="git_container"></div>
 </div>
