More Content and Minor Edits
Added HavocC2 Blog (Late)
Added Sec + Blog
Added Javascript
Edit About page for Certifications
Edit Styling sheets

--- a/about.html
+++ b/about.html
@@ -2,21 +2,35 @@
 layout: default
 title: About Me | ETI
 ---
-<div class="leftside">
-    <div class="block container">
-        <h1>About Me</h1>
-        <p style="max-width:500px;">
-            Hey there! My name is Elijah Iverson. After graduating from Southeast Missouri State University in 2023, 
-            I started pursuing Automation and Cloud within my expertise in cybersecurity. Outside of that, 
-            I like developing video games and building things physically.
-        </p>
+<div class="flex" style="justify-content:space-between;align-items:start;">
+    <div>
+        <div class="block container">
+            <h1>About Me</h1>
+            <p style="max-width:600px;">
+                Hello, My name is Elijah Iverson. I graduated from Southeast Missouri State University in 2023 
+                with a Bachelor of Science in Cybersecurity. I'm currently contuning my education through automating, 
+                using current cloud services, and studying for certifications.
+                Outside of my studies of cybersecurity, I like developing and making video games, homelab infrastructure, and wooden crafts
+            </p>
+        </div>
+        <div class="block container">
+            <h2>Contact Me</h2>
+            <p>You can email me at <a href="mailto:eliiverson00@gmail.com?">eliiverson00@gmail.com</a></p>
+            <p style="text-align:center;">
+                <a href="https://www.linkedin.com/in/elijah-iverson-7a73b41bb/" target="_blank">
+                    <img src="/assets/images/LinkedinLogo.png" class="linkicon"></a>
+                <a href="https://github.com/EmanG7" target="_blank">
+                    <img src="/assets/images/GithubLogo.png" class="linkicon"></a>
+            </p>
+        </div>
     </div>
-    <div class="block container">
-        <h2>Contact Me</h2>
-        <p>You can email me at <a href="mailto:eliiverson00@gmail.com?">eliiverson00@gmail.com</a></p>
-        <p style="text-align:center;"><a href="https://www.linkedin.com/in/elijah-iverson-7a73b41bb/" target="_blank">
-            <img src="/assets/images/LinkedinLogo.png" class="linkicon"></a>
-        <a href="https://github.com/EmanG7" target="_blank">
-            <img src="/assets/images/GithubLogo.png" class="linkicon"></a></p>
+    <div class="block container" style="text-align:center;">
+        <h1>My Certifications</h1>
+        <p>
+            <a href="https://www.credly.com/badges/a9a3bc31-660f-477f-92f0-6c7a42cb8d8a" target="_blank">
+                <img src="/assets/images/comptia-security-plus.png" class="linkcert"></a>
+            <a href="https://www.credly.com/badges/d8acd6e4-ff0d-43b9-9c33-a34826539cac" target="_blank">
+                <img src="/assets/images/aws-clf-c02.png" class="linkcert"></a>
+        </p>
     </div>
 </div>
