--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Home | ETI
     <a href="{{ site.posts[0].url }}" style="text-decoration: none;">
         <div class="block" style="text-align:center;">
             <h3>Most Recent Blog Post</h3>
-            <img src="{{ site.posts[0].image }}" alt="Image Related to Recent Post" width="auto" height="100px">
+            <img src="{{ site.posts[0].image }}" alt="Image Related to Recent Post" width="auto" height="100px" style="border-radius: 25px;">
             <p style="text-decoration: underline;">{{ site.posts[0].title }}</p>
             <p>Posted on {{site.posts[0].date | date_to_string}}</p>
         </div>
