Adding new post
Add msf blog and how I started using to for payloads and C2

--- a/about.html
+++ b/about.html
@@ -10,7 +10,9 @@ title: About Me | ETI
                 Hello, My name is Elijah Iverson. I graduated from Southeast Missouri State University in 2023 
                 with a Bachelor of Science in Cybersecurity. I'm currently contuning my education through automating, 
                 using current cloud services, and studying for certifications.
-                Outside of my studies of cybersecurity, I like developing and making video games, homelab infrastructure, and wooden crafts
+            </p><p style="max-width:600px;">
+                Outside of my studies of cybersecurity, I like playing and making video games, 
+                writing Infrastructure as Code, and working on houses.
             </p>
         </div>
         <div class="block container">
