--- a/about.html
+++ b/about.html
@@ -7,12 +7,16 @@ title: About Me | ETI
         <div class="block container">
             <h1>About Me</h1>
             <p style="max-width:600px;">
-                Hello, My name is Elijah Iverson. I graduated from Southeast Missouri State University in 2023 
-                with a Bachelor of Science in Cybersecurity. I'm currently contuning my education through automating, 
-                using current cloud services, and studying for certifications.
-            </p><p style="max-width:600px;">
-                Outside of my studies of cybersecurity, I like playing and making video games, 
-                writing Infrastructure as Code, and working on houses.
+                Hello, my name is Elijah Iverson. 
+                <br> 
+                I graduated with a Bachelors in Cybersecurity from Southeast Missouri State University.  
+                While in college, I participated in the Collegiate Cyber Defense Competition all four years, 
+                where we won at the state level of the competition for 3 of the 4 years.
+                <br> 
+                I'm currently contuning my studies with infrastructure automation, cloud architecture, 
+                and offensive security through certification and my homelab.
+                <br>
+                I’m constantly looking to grow and put my skills to the test.
             </p>
         </div>
         <div class="block container">
