--- a/about.html
+++ b/about.html
@@ -8,14 +8,14 @@ title: About Me | ETI
             <h1>About Me</h1>
             <p style="max-width:600px;">
                 Hello, my name is Elijah Iverson. 
-                <br> 
+                <br> <br> 
                 I graduated with a Bachelors in Cybersecurity from Southeast Missouri State University.  
                 While in college, I participated in the Collegiate Cyber Defense Competition all four years, 
                 where we won at the state level of the competition for 3 of the 4 years.
-                <br> 
-                I'm currently contuning my studies with infrastructure automation, cloud architecture, 
-                and offensive security through certification and my homelab.
-                <br>
+                <br> <br> 
+                I'm currently continuing my studies with infrastructure automation, cloud architecture, 
+                and offensive security through certification and my home-lab.
+                <br> <br> 
                 I’m constantly looking to grow and put my skills to the test.
             </p>
         </div>
