--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 layout: default
 title: Blog | ETI
 ---
-<div class="block container">
+<!-- <div class="block container">
     <h1>All Blog Post:</h1>
     <ul>
         {% for post in site.posts %}
@@ -10,4 +10,15 @@ title: Blog | ETI
             {{post.date | date_to_string}} - {{ post.title }}</a></li>
         {% endfor %}
     </ul>
+</div> -->
+<div class="flex container">
+    {% for post in site.posts %}
+    <a href="{{ post.url }}" style="text-decoration: none;">
+        <div class="block container" style="text-align:center;">
+            <h3 style="text-decoration: underline;">{{ post.title }}</h3>
+            <img src="{{ post.image }}" alt="Image Related to {{ post.title }}" width="auto" height="100px" style="border-radius: 25px;">
+            <p>Posted on {{post.date | date_to_string}}</p>
+        </div>
+    </a>
+    {% endfor %}
 </div>
